--- a/rlx/config/mc.yaml
+++ b/rlx/config/mc.yaml
@@ -1,5 +1,7 @@
-# rlx/config/mc.yaml
-# Default configuration for the Monte Carlo agent
+# rlx/config/mc.yaml 文件
+# 蒙特卡洛智能体的默认配置
 gamma: 0.99
 epsilon: 1.0
 total_steps: 50000
+num_bins: 10
+clip_obs: 10.0
