--- a/rlx/config/qlearning.yaml
+++ b/rlx/config/qlearning.yaml
@@ -1,6 +1,8 @@
-# rlx/config/qlearning.yaml
-# Default configuration for the Q-Learning agent
+# rlx/config/qlearning.yaml 文件
+# Q-Learning 智能体的默认配置
 lr: 0.1
 gamma: 0.99
 epsilon: 1.0
 total_steps: 50000
+num_bins: 10
+clip_obs: 10.0
