--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,11 @@
-# 核心依赖
+# 最小依赖（课程作业：CartPole 等经典控制 + 训练/画图脚本）
 torch
 gymnasium
-gymnasium[atari,other]
-Box2D>=2.3.10           # 维护中的 pybox2d,替代 box2d-py
-mujoco>=3.0.0           # 官方 mujoco python 绑定
 numpy
-pydantic
 pyyaml
-tqdm
-loguru
-tensorboard
-wandb
+matplotlib
 
-# 开发与代码检查
-ruff
-mypy
-black
-isort
+# 测试（可选）
 pytest
-pre-commit
+
+# 如需 Atari / MuJoCo / Box2D 等环境，请按需额外安装 gymnasium 对应 extra 或系统依赖。
